examples/const_vs_var.ul
// this works fine 
int x1 = 10;
x1 = 20;
x1 = 32;
print(x1,int);

int x ;
x = 10;
print(x,int);

// this throws an error 
const int x2 = 10;
x2 = 20; // error